kfreebsd-10 (10.0~svn255412-2) UNRELEASED; urgency=low

  * Remove one gratuitous round of src copying.

 -- Robert Millan <rmh@debian.org>  Sat, 14 Sep 2013 14:34:07 +0200

kfreebsd-10 (10.0~svn255412-1) experimental; urgency=low

  * New upstream snapshot.
    - 920_linux_cflags.diff: Set __FreeBSD__=10 in order to fix <stddef.h>
      buildability.
    - Switch to clang (at least until/unless GCC <wmmintrin.h> becomes
      buildable).

  [ Robert Millan ]
  * Stop overriding linker_path, this is done in userland already.
  * Make kfreebsd-headers-@version@-@abiname@ kfreebsd-specific.

 -- Robert Millan <rmh@debian.org>  Mon, 09 Sep 2013 14:18:49 +0200

kfreebsd-10 (10.0~svn254663-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.
    - Fix for CVE-2013-3077. (Closes: #720471)
    - Fix for CVE-2013-5209. (Closes: #720478)

  [ Robert Millan ]
  * Harmonize kernel config with upstream, reducing the GENERIC delta.
    - Let GENERIC define fdc. DEBIAN can override this afterwards.
    - Let GENERIC define lpt, ppi, tun, gif and faith. There seems to
      be no particular reason to diverge on these.
    - Don't include LINPROCFS and COMPAT_LINUX in GENERIC. DEBIAN already does.
  * Add INCLUDE_CONFIG_FILE option.  (Closes: #706736)
  * Use config(8) from freebsd-buildutils.

 -- Robert Millan <rmh@debian.org>  Thu, 22 Aug 2013 18:50:23 +0200

kfreebsd-10 (10.0~svn253832-1) experimental; urgency=low

  * New upstream snapshot.
    - Implements freebsd32_ktimer_* syscalls. (Closes: #666730)
    - if_run now disabled due to WITHOUT_SOURCELESS_UCODE.

  [ Robert Millan ]
  * Remove 951_disable_mk_magic.diff, use -DWITHOUT_CTF instead.
  * Split kernel_cc into cc_cmd and cc_pkg (this makes it easier to
    enable clang when desired).
  * Bump B-D on freebsd-buildutils to 10~svn251967-3.
  * mount_remount.diff: Implement "mount -o remount" glue in kernel like
    upstream wants.

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.