@@ -1,6 +1,7 @@
 kfreebsd-10 (10.0~svn255412-2) UNRELEASED; urgency=low
 
   * Remove one gratuitous round of src copying.
+  * Disable -Werror only for non-Clang compilers.
 
  -- Robert Millan <rmh@debian.org>  Sat, 14 Sep 2013 14:34:07 +0200
 
